Fix toggle wrap checkbox

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
         <label for="speedSlider" id="speedSliderLabel">Speed</label>
         <input id="speedSlider" type="range" min="5" max="600">
+
+        <label for="wrapGridToggle">Wrap edges</label>
+        <input id="wrapGridToggle" type="checkbox" checked>
     </body>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
