--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </body>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
-    <script src="wrk.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/spnr/cdn/latest/spnr.min.js"></script>
     <script src="gol.js"></script>
     <script src="initialGridValue.js"></script>
     <script src="script.js"></script>
