--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/spnr/cdn/latest/spnr.min.js"></script>
-    <script src="gol.js"></script>
+    <script src="GOL.js"></script>
+    <script src="GolScene.js"></script>
     <script src="initialGridValue.js"></script>
     <script src="script.js"></script>
 </html>
