--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <button onclick="golScene.togglePause()" id="pauseButton">Unpause</button>
         <button onclick="if (paused) gol.step()">Step</button>
 
-        <label for="speedSlider" id="speedSliderLabel">Speed</label>
-        <input id="speedSlider" type="range" min="5" max="600">
+        <label for="fpsSlider" id="fpsSliderLabel">fps</label>
+        <input id="fpsSlider" type="range" min="5" max="2400">
 
         <label for="wrapGridToggle">Wrap edges</label>
         <input id="wrapGridToggle" type="checkbox" checked>
