try and optimize or something

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="if (paused) gol.step()">Step</button>
 
         <label for="fpsSlider" id="fpsSliderLabel">fps</label>
-        <input id="fpsSlider" type="range" min="5" max="2400">
+        <input id="fpsSlider" type="range" min="5" max="2400" value="30">
 
         <label for="wrapGridToggle">Wrap edges</label>
         <input id="wrapGridToggle" type="checkbox" checked>
